--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-body {
-  background-color: white;
-  /* background-color: #4f4f4f; */
+.app {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
