--- a/src/components/ProductPage/Filter.css
+++ b/src/components/ProductPage/Filter.css
@@ -1,14 +1,15 @@
-.filter-container{
-    height: 25vh;
-    width: 100%;
-    margin-top: 30px;
-    background-color: lightslategray;
+.filter-container {
+  padding: 1px;
+  background-color: #6c757d;
+  border-bottom-left-radius: 100px;
+  border-bottom-right-radius: 100px;
+  margin-bottom: 25px;
 }
 
-#filter-title{
-    text-align: center;
+#filter-title {
+  text-align: center;
 }
 
-.filter-form{
-    margin: 50px;    
+.filter-form {
+  margin: 50px;
 }
