--- a/src/components/ProductPage/ProductsHome.css
+++ b/src/components/ProductPage/ProductsHome.css
@@ -5,5 +5,10 @@
 
 #prod-pg-title{
     text-align: center;
+    margin: 50px;
+}
+
+#filter-title{
+    text-align: center;
     margin-top: 50px;
 }
